# horde-worker-reGen

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_NOTICE.txt  README.md  README_advanced.md  REFACTORING_SUMMARY.md  TERMINAL_UI_FOUNDATION.md  THIRD-PARTY-NOTICES.md  TUI_README.md  _Start_Here.html  bootstrap.py  bridgeData_mock_example.yaml  bridgeData_template.yaml  convert_config_to_env.py  create-logs-bundle.cmd  create-logs-bundle.sh  horde-bridge-directml.cmd  horde-bridge.cmd  horde-bridge.sh  horde-worker.cmd  horde-worker.sh  install.ps1  install.sh  mkdocs.yml  mypy.ini  preload-models.cmd  preload-models.sh  pyproject.toml  pyrefly.toml  requirements.tui.txt  requirements.txt  runtime-rocm.sh  runtime.cmd  runtime.sh  (+8 more)
.github/workflows/: docker-publish.yml  maintests.yml  prtests.yml  release.yml  winget.yml
Dockerfiles/: Dockerfile.cuda  Dockerfile.rocm  README.md  compose.cuda.yaml  compose.rocm.yaml  entrypoint.sh  setup_rocm.sh
docs/: .pages  TUI.md  build_docs.py  index.md
docs/explanation/: .pages  architecture.md  bridge_config.md  code_issues_for_remediation.md  compute_backends.md  duty-cycle.md  frontend_and_state.md  image_utilities_lane.md  ipc_and_messaging.md  job_lifecycle.md  job_state_machine.md  log_diagnostics_contract.md  model_downloads.md  performance_and_backpressure.md  process_lanes_and_chaining.md  process_lifecycle.md  resilience_and_recovery.md  resource_governance.md  shutdown_and_faults.md  telemetry.md  vram_arbiter.md
docs/hooks/: utf8_subprocess.py
docs/horde_worker_regen/: .pages  _guarded_purge.md  app_state.md  attach_supervisor.md  capabilities.md  compute_mode.md  harness.md  log_file_registry.md  logging_purge.md  model_download_core.md  model_download_plan.md  reference_helper.md  runtime_version.md  server_capabilities.md  stats_operations.md  stats_purge.md  telemetry.md  telemetry_spans.md  torch_gpu_preflight.md  update_check.md
docs/hot-path-diagrams/: README.md  level-1-system-overview.md  level-2-major-subsystems.md
docs/how-to/: .pages  add-an-alchemy-mode.md  add-custom-models.md  attach-a-supervisor.md  choose-a-pytorch-build.md  configure-for-your-gpu.md  enable-winget-publishing.md  install.md  run-an-alchemist-only-worker.md  run-headless.md  run-in-docker.md  run-multiple-gpus.md  run-on-amd-rocm.md  troubleshoot.md  update-the-worker.md  use-the-dashboard.md
docs/reference/: .pages  cli.md  codebase-map.md  logs.md  stats.md
docs/tutorials/: .pages  getting-started.md
horde_worker_regen/: __init__.py  _guarded_purge.py  _version_meta.json  app_state.py  attach_supervisor.py  capabilities.py  compute_mode.py  consts.py  download_models.py  harness.py  load_env_vars.py  log_file_registry.py  logging_purge.py  model_download_core.py  model_download_plan.py  reference_helper.py  run_worker.py  runtime_version.py  server_capabilities.py  stats_operations.py  stats_purge.py  telemetry.py  telemetry_spans.py  torch_gpu_preflight.py  update_check.py  version_meta.py
horde_worker_regen/amd_go_fast/: amd_go_fast.py  install_amd_go_fast.sh
horde_worker_regen/analysis/: __init__.py  bundle.py  cache_inventory.py  correlate.py  detectors.py  diagnose.py  duty_log_report.py  governor_signatures.py  kudos_score.py  ledger_ingest.py  log_ingest.py  log_triage_cli.py  redaction.py  session_duty.py  sessions.py  support_bundle.py  system_info.py  triage_report.py  watch.py
horde_worker_regen/benchmark/: __init__.py  cli.py  controller.py  criteria.py  disagg_mixes.py  download_progress.py  enums.py  gate_driver.py  history.py  ladder.py  level_runner.py  memory_preflight.py  progress_channel.py  progress_console.py  report.py  requirements.py  scenarios.py  sizing.py  soak.py  telemetry_query.py  worker_env.py
horde_worker_regen/bridge_data/: __init__.py  beta_source.py  data_model.py  disagg_model_selection.py  gpu_config.py  load_config.py
horde_worker_regen/events/: README.md  __init__.py  event_dispatcher.py  event_listener.py  event_types.py  example_listeners.py  test_events.py
horde_worker_regen/process_management/: _canned_scenarios.py  _dummy_jobs.py  action_ledger.py  alchemy_popper.py  child_crash_capture.py  desired_state.py  device_info.py  download_process.py  download_scheduler.py  duty_cycle.py  failure_classification.py  fake_worker_processes.py  fault_injection.py  fd_limits.py  feature_readiness.py  gpu_eligibility.py  gpu_pop_shaping.py  horde_model_map.py  horde_process.py  (+37 more)
packaging/: README.md  build-local.ps1  bundle-include.txt  collect-licenses.py  detect-backend.ps1  fetch-releases.ps1  sync-winget-version.py
requirements/: README.md  utilities.cpu.txt  utilities.cu126.txt  utilities.cu130.txt  utilities.cu132.txt  utilities.example.txt
requirements/utilities/: pyproject.toml
tests/: __init__.py  _capability_probes.py  _log_sink_probe.py  conftest.py  download_test_helpers.py  test_alchemy_models.py  test_app_state.py  test_attach_supervisor.py  test_beta_models_filter.py  test_bridge_data.py  test_bundle_manifest.py  test_cache_home_precedence.py  test_capabilities.py  test_component_cache_config.py  test_compute_mode.py  test_device_attribution.py  test_disagg_model_selection.py  test_disagg_optimized_meta.py  test_disagg_optimized_mode.py  test_dockerfile_opencv_libs.py  test_driven_devices.py  test_gpu_config.py  test_gpu_eligibility.py  test_guarded_purge.py  test_horde_dep_updates.py  test_install_prune_parity.py  test_job_queue_analyzer.py  test_kudos_calculator.py  test_kudos_training_recorder.py  test_log_file_registry.py  test_logging_purge.py  test_model_download_plan.py  test_only_models_on_disk.py  test_oom_signature.py  test_packaging_versions.py  test_pre_commit_dep_version.py  test_reference_helper.py  test_run_worker_update_check.py  test_runtime_version.py  test_self_updater.py  (+15 more)
worker_bootstrap/: __init__.py  backend.py  cli.py  config_seed.py  consent.py  detect.py  gitbin.py  paths.py  rocm.py  runner.py  sync_plan.py  updater.py  utilities_env.py  uvbin.py
(+1016 files in other folders)
