[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horde_worker_regen"
version = "12.1.2"
description = "Allows you to connect to the AI Horde and generate images for users."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "aiodns>=3.0.0,<4.0.0",
    "qrcode==7.4.2",
    "certifi",
    "horde_sdk~=0.20.6",
    "horde_safety~=0.3.0",
    # Requires horde-engine (hordelib) 3.1.0+: it declares torchvision/torchaudio as ranges so the
    # worker's cuXXX build extras resolve the latest torch (2.12.0 today) for the chosen wheel index.
    # Regenerate uv.lock with `uv lock` once horde-engine 3.1.0 is published (the lock was verified
    # against a local editable build during development).
    "horde_engine>=3.1.0,<4.0.0",
    "horde_model_reference>=5.1.1,<6.0.0",
    "python-dotenv",
    "ruamel.yaml",
    "semver",
    "python-Levenshtein",
    "pydantic>=2.9.2",
    "typing_extensions",
    "requests",
    "StrEnum",
    "loguru",
    "babel",
    "textual>=2.1.0",
    "textual-serve>=1.1.1",
    "logfire>=4.6.0",
]

[project.optional-dependencies]
# One thin extra per NVIDIA/CPU build. torch is left UNPINNED and floats to the latest version the
# horde-engine torchvision/torchaudio ranges allow (today 2.12.0 -> torchvision 0.27.0 / torchaudio
# 2.11.0); the extra only routes torch to the matching wheel index (see [tool.uv.sources]). GPU
# detection (packaging/detect-backend.ps1 / install.sh) picks the build; update-runtime.* install it
# with `uv sync --locked --extra <build>`:
#   cu132   NVIDIA, CUDA 13.2+ driver (exact 13.2 build; auto-selected when the driver is 13.2 or newer)
#   cu130   NVIDIA, CUDA 13.0/13.1 driver (auto-selected for those; a 13.2+ driver gets cu132 instead)
#   cu126   NVIDIA, CUDA 12.6+ driver (the only CUDA-12 build of torch 2.12.0; also runs on CUDA 13)
#   cpu     no GPU (~100x slower; testing only)
# Only these builds are locked. ROCm and other builds/versions are installed AD-HOC (not from the lock):
# e.g. ROCm: `uv pip install torch==2.9.1 torchvision torchaudio pytorch-triton-rocm --extra-index-url
# https://download.pytorch.org/whl/rocm6.4`; or let uv auto-detect: `UV_TORCH_BACKEND=auto uv pip
# install torch torchvision torchaudio`. (torch 2.12.0 has no cu128 wheel, so CUDA 12.x uses cu126.)
# directml was removed in the hordelib v3 catch-up.
cu126 = ["torch"]
cu130 = ["torch"]
cu132 = ["torch"]
cpu = ["torch"]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-worker-reGen"
"Bug Tracker" = "https://github.com/Haidra-Org/horde-worker-reGen/issues"

[project.scripts]
run_worker = "horde_worker_regen.run_worker:start"
download_models = "horde_worker_regen.download_models:main"
horde-worker = "horde_worker_regen.tui.app:main"
horde-worker-web = "horde_worker_regen.tui.web:main"
horde-worker-host = "horde_worker_regen.tui.worker_host:main"
horde-benchmark = "horde_worker_regen.benchmark.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff==0.15.16",
    "pre-commit~=4.6.0",
    "pyrefly==1.0.0",
    "build>=0.10.0",
    "coverage>=7.2.7",
    "semver",
    "pytest-cov",
    "babel",
    "types-requests",
    "types-pillow",
    "types-pytz",
    "types-setuptools",
    "types-urllib3",
    "types-pyyaml",
    "types-pygments",
    "types-colorama",
    "types-psutil",
    "types-pywin32",
    "types-tabulate",
    "types-tqdm",
    "types-regex",
    "tach>=0.34.0",
    "debugpy>=1.8.21",
]

# -- uv configuration --

[tool.uv]
python-preference = "managed"
conflicts = [
    [
        {extra = "cu126"},
        {extra = "cu130"},
        {extra = "cu132"},
        {extra = "cpu"},
    ],
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu130", extra = "cu130"},
    {index = "pytorch-cu132", extra = "cu132"},
    {index = "pytorch-cpu", extra = "cpu"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# -- hatchling build config --

[tool.hatch.build.targets.wheel]
packages = ["horde_worker_regen"]

[tool.hatch.build.targets.wheel.force-include]
"horde_worker_regen/assets" = "horde_worker_regen/assets"

[tool.ruff]
line-length = 119 # ruff format is canonical formatter
lint.select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  "B",
  "C4",
  "PIE",
  "RET",
  "SIM",
  "COM",
  "D",
  "ANN"]
lint.ignore = [
  "D100", # Missing docstring in public module
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "COM812" # warning: The following rule may cause conflicts when used with the formatter: `COM812`.
  ]
extend-exclude = ["conda", "model-stats.py", "amd_go_fast.py"]

[tool.ruff.lint.per-file-ignores]
"download_models.py" = ["E402"]
"run_worker.py" = ["E402"]
"benchmark/runner.py" = ["E402"]
"convert_config_to_env.py" = ["E402"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pytest.ini_options]
addopts = "-p pytest_asyncio"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: full-lifecycle tests that spawn real child processes (slower than unit tests)",
]
