[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "horde_worker_regen"
# The version is sourced from horde_worker_regen/__init__.py (__version__) via [tool.hatch.version]
# below, so it lives in exactly one place. Bump the literal there, not here.
dynamic = ["version"]
description = "Allows you to connect to the AI Horde and generate images for users."
authors = [
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "aiodns>=3.0.0,<4.0.0",
    "qrcode==7.4.2",
    "certifi",
    "horde_sdk~=0.20.6",
    "horde_safety~=0.3.0",
    # Requires horde-engine (hordelib) 3.2.11+: in addition to the 3.2.5+ feature set (torchvision range,
    # no hard torchaudio dep, optional-feature extras + capability registry consumed by
    # horde_worker_regen/capabilities.py), 3.2.11 adds the torch-free VRAM-planning helpers
    # (hordelib.vram_planning.compute_inference_reserve_mb / compute_weight_budget_mb) and the runtime
    # weight-streaming telemetry (get_loaded_weights_offloaded_mb) the worker's streaming forecast and
    # whole-card exclusive residency depend on.
    "horde_engine[layerdiffuse,upscale-extra]>=3.3.2,<4.0.0",
    "horde_model_reference>=5.3.0,<6.0.0",
    "python-dotenv",
    "ruamel.yaml",
    "semver",
    "python-Levenshtein",
    "pydantic>=2.9.2",
    "typing_extensions",
    "requests",
    "StrEnum",
    "loguru",
    "babel",
    "textual>=2.1.0",
    "textual-serve>=1.1.1",
    "logfire>=4.6.0",
]

[project.optional-dependencies]
# One thin extra per NVIDIA/CPU build. torch and torchvision are left UNPINNED and float to the latest
# version the horde-engine torchvision range allows (today 2.12.0 -> torchvision 0.27.0); the extra
# routes BOTH to the matching wheel index (see [tool.uv.sources]) so their CUDA builds never disagree.
# GPU detection (packaging/detect-backend.ps1 / install.sh) picks the build; update-runtime.* install it
# with `uv sync --locked --extra <build>`:
#   cu132   NVIDIA, CUDA 13.2+ driver (exact 13.2 build; auto-selected when the driver is 13.2 or newer)
#   cu130   NVIDIA, CUDA 13.0/13.1 driver (auto-selected for those; a 13.2+ driver gets cu132 instead)
#   cu126   NVIDIA, CUDA 12.6+ driver (the only CUDA-12 build of torch 2.12.0; also runs on CUDA 13)
#   cpu     no GPU (~100x slower; testing only)
# torchaudio is NOT routed here: it has no +cu132 wheel and audio is unsupported, so it must never be
# mixed in (a cu132 torch + a PyPI torchaudio is exactly the CUDA-version-mismatch crash this avoids).
# horde-engine omits it by default and stubs it at runtime; install ad-hoc if you ever need audio
# (cu126/cu130/cpu only). Only these builds are locked. ROCm, Intel XPU, and other builds/versions are
# installed AD-HOC (not from the lock): they pull their own triton sidecar (pytorch-triton-rocm /
# pytorch-triton-xpu) which has no wheel under the locked torch range + py3.12, so locking them is
# unsolvable. ROCm: `uv pip install torch==2.9.1 torchvision pytorch-triton-rocm --extra-index-url
# https://download.pytorch.org/whl/rocm6.4`. Intel XPU: `uv pip install torch torchvision
# --extra-index-url https://download.pytorch.org/whl/xpu`. Or let uv auto-detect:
# `UV_TORCH_BACKEND=auto uv pip install torch torchvision`. (torch 2.12.0 has no cu128 wheel, so CUDA
# 12.x uses cu126.) directml was removed in the hordelib v3 catch-up.
cu126 = ["torch", "torchvision"]
cu130 = ["torch", "torchvision"]
cu132 = ["torch", "torchvision"]
cpu = ["torch", "torchvision"]

# Optional backend-blocking features, each re-exporting a horde-engine extra. These pull native deps
# (onnxruntime/mediapipe via controlnet; rembg via post-processing) that have no wheels for some
# accelerators (Intel XPU / Apple MPS / Ascend), so they are NOT in the base install: a base worker
# runs on every backend ComfyUI supports and screens images (the safety classifier is pure torch).
#
# Install profiles re-add these by default on NVIDIA/CPU; non-NVIDIA opts in only where wheels exist.
# When a feature's deps are absent, horde_worker_regen/capabilities.py warns and coerces it off so the
# worker never advertises what it cannot run. post-processing is one atomic bucket (strip_background
# cannot be excluded per-job until the AI Horde API supports it), so its single extra covers it all.
post-processing = ["horde-engine[rembg]"]
controlnet = ["horde-engine[controlnet]"]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-worker-reGen"
"Bug Tracker" = "https://github.com/Haidra-Org/horde-worker-reGen/issues"

[project.scripts]
run_worker = "horde_worker_regen.run_worker:start"
download_models = "horde_worker_regen.download_models:main"
horde-worker = "horde_worker_regen.tui.app:main"
horde-worker-web = "horde_worker_regen.tui.web:main"
horde-worker-host = "horde_worker_regen.tui.worker_host:main"
horde-benchmark = "horde_worker_regen.benchmark.cli:main"
horde-duty-report = "horde_worker_regen.analysis.duty_log_report:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff==0.15.16",
    "prek==0.4.5",
    "pyrefly==1.0.0",
    "build>=0.10.0",
    "coverage>=7.2.7",
    "semver",
    "pytest-cov",
    "babel",
    "types-requests",
    "types-pillow",
    "types-pytz",
    "types-setuptools",
    "types-urllib3",
    "types-pyyaml",
    "types-pygments",
    "types-colorama",
    "types-psutil",
    "types-pywin32",
    "types-tabulate",
    "types-tqdm",
    "types-regex",
    "tach>=0.34.0",
    "debugpy>=1.8.21",
]

docs = [
    "mkdocs==1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.7",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocstrings-python-xref>=2.1.1",
]

# -- uv configuration --

[tool.uv]
python-preference = "managed"
conflicts = [
    [
        {extra = "cu126"},
        {extra = "cu130"},
        {extra = "cu132"},
        {extra = "cpu"},
    ],
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu130", extra = "cu130"},
    {index = "pytorch-cu132", extra = "cu132"},
    {index = "pytorch-cpu", extra = "cpu"},
]
# torchvision is routed alongside torch so the pair always shares one build; a torchvision left to
# resolve from generic PyPI pulls a different build and breaks the install.
torchvision = [
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu130", extra = "cu130"},
    {index = "pytorch-cu132", extra = "cu132"},
    {index = "pytorch-cpu", extra = "cpu"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# -- hatchling build config --

[tool.hatch.version]
# Single source of truth for the release version: hatchling reads __version__ from this file at build
# time, and the worker reads the same literal at runtime. No git or installed-metadata lookup is needed,
# so the .git-less release zip bundle still builds correctly under `uv sync`.
path = "horde_worker_regen/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["horde_worker_regen"]

[tool.ruff]
line-length = 119 # ruff format is canonical formatter
lint.select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  "B",
  "C4",
  "PIE",
  "RET",
  "SIM",
  "COM",
  "D",
  "ANN"]
lint.ignore = [
  "D100", # Missing docstring in public module
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
  "COM812" # warning: The following rule may cause conflicts when used with the formatter: `COM812`.
  ]
extend-exclude = ["conda", "model-stats.py", "amd_go_fast.py"]

[tool.ruff.lint.per-file-ignores]
"download_models.py" = ["E402"]
"run_worker.py" = ["E402"]
"benchmark/runner.py" = ["E402"]
"convert_config_to_env.py" = ["E402"]
# Verbatim bridge.log lines under test must match the real (long) log format exactly.
"test_duty_log_report.py" = ["E501"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pytest.ini_options]
addopts = "-p pytest_asyncio"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Scope collection to our own tests. A bare `pytest` from the repo root would
# otherwise recurse into vendored dirs (e.g. the uv cache, now in the peered
# <worker>-data sibling, or .venv) and try to import the bundled test suites of
# third-party wheels, failing on their dev-only deps. norecursedirs is
# belt-and-suspenders for explicit path args.
testpaths = ["tests"]
norecursedirs = ["bin", ".venv", "build", "dist", "*.egg-info"]
markers = [
    "e2e: full-lifecycle tests that spawn real child processes (slower than unit tests)",
]
